assets/css/custom.css
:root{
    --primary-color: #3c6eb4;
    --secondary-color: #294172;
}

body {
    font-family: 'Open Sans';
    line-height: 1.8em;
    font-size: 16px;
}

h1, h2, h3, h4, h5, h6 {
    font-family: 'Montserrat';
    margin-top: 1.4em;
}

a, a:hover {
    color: var(--secondary-color);
}

aside {
    background: var(--primary-color);
    margin: -20px 0 0 0;
}

aside .sidebar {
    padding: 30px 15px;
    text-align: center;
    color: white;
}

aside .sidebar a {
    color: white;
    font-family: Montserrat;
    font-size: 18px;
    cursor: pointer;
}

aside .sidebar .total-packets {
    cursor: default;
}
aside .sidebar .total-packets:hover{
  text-decoration: none;
}

aside .sidebar a:hover {
    text-decoration: underline;
    background: none;
}

aside .sidebar .logo {
    max-height: 140px;
    margin: 30px 0;
}

li.active[role="presentation"] a{
    background: #fff;
    color: var(--primary-color);
    font-weight: bold;
    border-radius: 2em;
    margin-right: -100%;
    padding-right: calc(100% + 10px);
}

footer {
    text-align: center;
    padding:0 7vw;
    background-color: #3c6eb421;
}

fieldset {
    margin-top: 1em;
}

fieldset legend {
    font-family: 'Montserrat';
    font-style: italic;
    border-bottom: 0px;
}

blockquote {
    border-left: 0px;
    font-size: 16px;
    color: rgba(0, 0, 0, 0.7);
    background: url(/static/images/loveletter.png) no-repeat;
    background-size: 20%;
    background-position: 0 20px;
    padding-left: calc(20% + 20px);
    min-height: 120px;
}

.centered {
    margin-left: auto;
    margin-right: auto;
    display: block;
}

.btn {
    background: white;
    color: var(--secondary-color);
    padding: 0.9em 1.3em;
    margin: 2em;
    border: 2px solid var(--secondary-color);
    border-radius: 2em;
    text-transform: uppercase;
}

.btn:hover {
    background: var(--secondary-color);
    color: white;
    font-weight: bold;
}

.btn-primary:hover{
    font-weight: normal;
    border-color: var(--secondary-color);
}

.btn-primary:hover img.emoji{
    transition: 0.6s ease-in;
    transform: scale(1.08) rotate(360deg);
}

.btn-login, .btn-logout {
  background: none;
  color: white;
  border-color: #fff;
  padding: 14px 20px 12px 20px;
}

.btn-login:hover, .btn-logout:hover{
    background: #fff;
    color: var(--primary-color);
    border-color: #fff;
}

.row.content {
    min-height: 200px;
}

.lead {
    line-height: 1.8em;
}

.asteriskField {
    display: none;
}

#div_id_hp {
    display: none;
}

#faq h3 {
    margin-top: 2em;
}

@media (min-width: 992px) {
    aside {
        width: 25%;
        height: calc(100% + 20px);
        position: fixed;
        display: flex;
        justify-content: center;
        background: -moz-linear-gradient(top,  var(--primary-color) 0%, var(--primary-color) 27%, var(--primary-color) 27%, var(--primary-color) 100%);
        background: -webkit-linear-gradient(top,  var(--primary-color) 0%, var(--primary-color) 27%, var(--primary-color) 27%, var(--primary-color) 100%);
        background: linear-gradient(to bottom,  var(--primary-color) 0%, var(--primary-color) 27%, var(--primary-color) 27%, var(--primary-color) 100%);
    }

    aside .sidebar {
        max-width: 300px;
        float: right;
    }

    aside .sidebar .logo {
        max-width: 90%;
        max-height: 300px;
    }

    main {
        margin-left: 25%;
    }

    main .container {
        padding: 0px 50px;
        width: 100%;
    }

    blockquote {
        min-height: 130px;
    }

    .row.content {
        min-height: 500px;
    }
}

@media (max-width: 975px){
    li.active[role="presentation"] a{
        background: #fff;
        color: var(--primary-color);
        font-weight: bold;
        border-radius: 2em;
        margin-right: 0;
        padding-right: 15px;
    }
}

@media (min-width: 1530px) {
    blockquote {
        min-height: 170px;
    }
}

.emoji {
    vertical-align: initial;
}

.sharebutton {
    position: relative;
    height: 28px;
    box-sizing: border-box;
    background-color: #3B5998;
    padding: 1px 10px 1px 9px;
    color: #fff;
    font-weight: 500;
    cursor: pointer;
    inherit: none;
    display: inline-block;
    vertical-align: top;
    font: normal normal normal 11px/18px 'Helvetica Neue',Arial,sans-serif;
    font-size: 0.6em;
    line-height: 26px;
    border-radius: 4px;
}

.sharebutton:hover {
    text-decoration: none;
    color: #fff;
    background-color: #2f4779;
}

.google{
    background-color: #d34836;
}

.google:hover{
    background-color: #b72213;
}

@media (max-width: 360px) {
    .btn-responsive {
        font-size: 15px;
    }
}

.twitter {
    background-color: #00aced;
}

.twitter:hover {
    background-color: #0084b4;
}
@media (max-width: 450px) {
    aside .sidebar .logo {
        width: 100%;
    }
}
.wearefedora {
    color: var(--primary-color);
    font-weight: 600;
    font-size:2.3rem;
}
.footer-msg {
    padding-top: 0.5rem;
}
.footer-msg p {
  font-size: 2rem;
}
.footer-msg a {
    font-weight: 600;
}
.row p {
    font-size: 2rem;
}
.footer-share p{
    font-size: 2rem;
}
.socio-buttons {
    padding: 1rem;
    font-size: 2rem;
}
.socio-buttons a {
    padding: 0.9rem;
}

